@@ -23,6 +23,7 @@ Fixes:
    * Fix scroller acceleration bug. It was accelerated even it's scrolled after finishing the previous scroll. This happens with page scroll enabled.
    * Fix initial value of the spinner on the first mouse move.
    * Entry: Fixed a bug with text appending.
+   * List : Focus_next should be executed only when access mode is enabled.
         
 Elementary 1.7.5
 
